<resources>
    <string name="app_name">Expenses</string>
    <string name="app_data_folder">Expenses</string>
    <string name="app_version">0.1</string>
    <string name="title_default_transaction_list_activity">Transactions</string>
    <string name="title_accounts_transaction_list_activity">Account Transactions</string>
    <string name="title_budgets_transaction_list_activity">Budget Transactions</string>
    <string name="title_activity_transaction_entry">Transactions</string>
    <string name="title_activity_account_entry">Accounts</string>
    <string name="title_activity_budget_entry">Budgets</string>
    <string name="title_transactions_list_section">Transactions</string>
    <string name="title_accounts_list_section">Accounts</string>
    <string name="title_budgets_list_section">Budgets</string>
    <string name="title_statistics_section">Statistics</string>
    <string name="title_settings_section">Settings</string>
    <string name="title_about_section">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_transactions_revenues">Revenues</string>
    <string name="title_transactions_expenses">Expenses</string>
    <string name="title_transactions_transfers">Transfers</string>
    <string name="title_budgets">Budgets</string>
    <string name="title_statistics_accounts">Accounts</string>
    <string name="title_statistics_budgets">Budgets</string>
    <string name="action_settings">Settings</string>
    <string name="action_transaction_add">Add</string>
    <string name="action_transaction_search">Search</string>
    <string name="action_transaction_search_undo">Undo</string>
    <string name="action_transaction_edit">Edit</string>
    <string name="action_transaction_delete">Delete</string>
    <string name="action_account_add">Add</string>
    <string name="action_account_edit">Edit</string>
    <string name="action_account_delete">Delete</string>
    <string name="action_budget_add">Add</string>
    <string name="action_budget_edit">Edit</string>
    <string name="action_budget_delete">Delete</string>
    <string name="title_error_dialog">Error</string>
    <string name="title_confirm_dialog">Confirm</string>
    <string name="title_sorry_dialog">Ops...</string>
    <string name="title_account_chooser_dialog">Delete account</string>
    <string name="title_budget_chooser_dialog">Delete budget</string>
    <string name="title_search_transaction_dialog">Type something to search</string>
    <string name="title_color_picker_dialog">Pick a Color"</string>
    <string name="title_import_chooser_dialog">Import data</string>
    <string name="got_it">Ok, got it</string>
    <string name="cancel">Don\'t do that</string>
    <string name="import_this">Import this</string>
    <string name="delete_all">Yes, delete all</string>
    <string name="delete_and_move">Move and delete</string>
    <string name="sure_go_on">Yes, proceed</string>
    <string name="title_activity_debug">Debug</string>
    <string name="debug_import_from_mymoney_button">Import from myMoney</string>
    <string name="debug_import_button">Import</string>
    <string name="debug_export_button">Export</string>
    <string name="debug_add_account_button">Test Add Accounts</string>
    <string name="debug_add_transactione_button">Test Add Transaction</string>
    <string name="debug_clear_data_button">Clear Data</string>
    <string name="debug_multiline_desc_button_on">Multi-line Desc</string>
    <string name="debug_multiline_desc_button_off">Single-line Desc</string>
    <string name="button_feedback_label">Tap here to send your feedback</string>
    <string name="app_version_label">Version</string>
    <string name="app_version_postfix">(beta)</string>
    <string name="app_author_full">Author: Antonio Solano</string>
    <string name="app_feedback_mail">asolanoit@gmail.com</string>
    <string name="app_feedback_mail_subjejct">Expenses feedback report</string>
    <string name="app_feedback_mail_body">Write here your feedback</string>
    <string name="statistics_message">Statistics on your expenses are coming soon!!!</string>
    <string name="transaction_entry_title">Create Transaction</string>
    <string name="transaction_edit_title">Edit Transaction</string>
    <string name="account_entry_title">Create Account</string>
    <string name="account_edit_title">Edit Account</string>
    <string name="budget_entry_title">Create Budget</string>
    <string name="budget_edit_title">Edit Budget</string>
    <string name="change_color_message">Tap the circle to change the color</string>
    <string name="default_footer_text">Default footer text</string>
    <string name="transaction_list_footer_text">Nothing to show here</string>
    <string name="expenses_list_footer_text">Nothing to show here</string>
    <string name="revenues_list_footer_text">Nothing to show here</string>
    <string name="transfers_list_footer_text">Nothing to show here</string>
    <string name="message_existing_all_data_will_be_deleted">If you proceed all the existing data will be deleted. Are you sure you want to go?</string>
    <string name="error_cannot_delete_last_account">There is only this account remaining. You cannot delete it</string>
    <string name="error_cannot_delete_last_budget">There is only this budget remaining. You cannot delete it</string>
    <string name="message_account_chooser_dialog">If you want to delete the account, select a new one to move transactions on or delete all the transaction for the account</string>
    <string name="message_budget_chooser_dialog">If you want to delete the budget, select a new one to move transactions on</string>
    <string name="message_account_deleted">" Deleted"</string>
    <string name="message_budget_deleted">" Deleted"</string>
    <string name="message_transaction_deleted">" Deleted"</string>
    <string name="message_import_chooser_dialog">"Select the save you want to import"</string>
    <string name="message_nothing_to_import_dialog">"Nothing to import"</string>
    <string name="message_click_again_to_exit">"Click again to exit"</string>
    <string name="working">"Working..."</string>
    <string name="error_importing_data">"Ops... something unexpected happens while importing data"</string>
    <string name="error_exporting_data">"Ops... something unexpected happens while exporting data"</string>
    <string name="empty"></string>
    <string name="amount_label">Amount</string>
    <string name="currency">$</string>
    <string name="value_0_00">0.00</string>
    <string name="value_15250_00">15250.00</string>
    <string name="currency_value_1050_00">$ 1050.00</string>
    <string name="placeholder">something</string>
    <string name="currency_value_0_00">$ 0.00</string>
    <string name="in_label">in</string>
    <string name="out_label">out</string>
    <string name="net_label">net</string>
    <string name="net_with_N_label">Net</string>
    <string name="balance_label">Balance</string>
    <string name="threshold_label">Threshold</string>
    <string name="name_label">Name</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="description_label">Description</string>
    <string name="description">Description</string>
    <string name="date_label">Date</string>
    <string name="date">2014-May-11</string>
    <string name="account_label">Account</string>
    <string name="account">Account</string>
    <string name="to_label">To</string>
    <string name="from_label">From</string>
    <string name="budget_label">Budget</string>
    <string name="budget">Budget</string>
    <string name="budget_period">2 Weeks</string>
    <string name="recurrent_label">Recurrent</string>
    <string name="every_label">Every</string>
    <string name="until_label">Until</string>
    <string name="starting_label">Starting</string>
    <string name="revenue_label">Revenues</string>
    <string name="expense_label">Expenses</string>
    <string name="total_label">Total</string>
    <string name="button_confirm_add_label">Add</string>
    <string name="button_confirm_edit_label">Change</string>
    <string name="button_confirm_search_label">Search</string>
    <string name="button_cancel_label">Cancel</string>
    <string name="time_unit_undef">Undef</string>
    <string name="time_unit_day">Day</string>
    <string name="time_unit_days">Days</string>
    <string name="time_unit_week">Week</string>
    <string name="time_unit_weeks">Weeks</string>
    <string name="time_unit_month">Month</string>
    <string name="time_unit_months">Months</string>
    <string name="time_unit_year">Year</string>
    <string name="time_unit_years">Years</string>
    <string-array name="arrayFakeAccount">
    </string-array>
    <string-array name="arrayFakeBudget">
    </string-array>
    <string-array name="arrayFakeColor">
    </string-array>
    <string-array name="arrayFakeFreqUnit">
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_currency_symbol">Choose currency symbol</string>
    <string name="pref_header_transaction_defaulting">Transactions Default</string>
    <string name="pref_enable_expense_default">Enable expenses defaulting</string>
    <string name="pref_title_default_account_expense">Default Account for expenses</string>
    <string name="pref_title_default_budget_expense">Default Budget for expenses</string>
    <string name="pref_enable_revenue_default">Enable revenue defaulting</string>
    <string name="pref_title_default_account_revenue">Default Account for revenues</string>
    <string name="pref_title_default_budget_revenue">Default Budget for revenues</string>
    <string name="pref_enable_transfer_default">Enable transfer defaulting</string>
    <string name="pref_title_default_from_account_transfer">Default FROM Account for transfers</string>
    <string name="pref_title_default_to_account_transfer">Default TO Account for transfers</string>
    <string name="pref_title_default_budget_transfer">Default Budget for transfers</string>
    <string name="pref_header_data_import_export">Data Import and Export</string>
    <string name="pref_title_launch_import">Import Data</string>
    <string name="pref_title_launch_export">Export Data</string>
</resources>