<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.antso.expenses.DebugActivity">

    <Button
        android:id="@+id/importFromMyMoneyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/debug_import_from_mymoney_button"
        android:layout_gravity="left" />

    <Button
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/debug_export_button"
        android:layout_gravity="left" />

    <Button
        android:id="@+id/importButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/debug_import_button"
        android:layout_gravity="left" />

    <Button
        android:id="@+id/testButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/debug_add_account_button"
        android:layout_gravity="left" />

    <Button
        android:id="@+id/testButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/debug_add_transactione_button"
        android:layout_gravity="left" />

    <Button
        android:id="@+id/clearDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/debug_clear_data_button"
        android:layout_gravity="left" />

</LinearLayout>
