<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circleSectorview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/transactionItemLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:id="@+id/transactionRecurrent"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginRight="6dp"
            android:src="@drawable/ic_action_refresh"
            android:contentDescription="@string/placeholder"/>

        <TextView
            android:id="@+id/transactionDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="italic"
            android:text="@string/date">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-6dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >

        <TextView
            android:id="@+id/transactionValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/currency_value_1050_00">
        </TextView>

        <TextView
            android:id="@+id/transactionDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textSize="20sp"
            android:singleLine="true"
            android:text="@string/description">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/accountAndBudgetLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="-4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >

        <TextView
            android:id="@+id/budgetLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="14sp"
            android:textStyle="italic"
            android:text="@string/budget">
        </TextView>

        <TextView
            android:id="@+id/accountLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="14sp"
            android:textStyle="italic"
            android:text="@string/account">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/accountAndAccountLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="-4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="14sp"
            android:textStyle="italic"
            android:text="@string/from_label">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="14sp"
            android:textStyle="italic"
            android:text="@string/to_label">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/accountAndBudgetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="16dp"
        >

        <com.antso.expenses.views.CircleSectorView
            android:id="@+id/budgetColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            circleSectorview:cFillColor="#ff0000"
            circleSectorview:cRadiusDp="10"
            circleSectorview:cAngleStart="0"
            circleSectorview:cAngleSweep="360"
            />
        <TextView
            android:id="@+id/budgetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="14sp"
            android:singleLine="true"
            android:text="@string/budget">
        </TextView>

        <com.antso.expenses.views.CircleSectorView
            android:id="@+id/accountColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            circleSectorview:cFillColor="#0000ff"
            circleSectorview:cRadiusDp="10"
            circleSectorview:cAngleStart="0"
            circleSectorview:cAngleSweep="360"
            />

        <TextView
            android:id="@+id/accountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="14sp"
            android:singleLine="true"
            android:text="@string/account">
        </TextView>

    </LinearLayout>

</LinearLayout>